LotFP: Generate skills, equipment fixes
- standard list of skills generated automatically
- fixed equipment not aligning to start

--- a/Lotfp/Lotfp.css
+++ b/Lotfp/Lotfp.css
@@ -212,6 +212,7 @@ button[type=roll].sheet-skill-button::before {
 .sheet-equipment {
     display: flex;
     flex-wrap: wrap;
+    align-content: start;
 }
 .sheet-equipment .repcontainer {
     width: 100%;
